--- a/package.json
+++ b/package.json
@@ -13,7 +13,14 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.5",
     "@prisma/client": "^5.12.1",
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/validator": "^13.11.8",
+    "axios": "^1.6.8",
+    "bcrypt": "^5.1.1",
+    "cookies-next": "^4.1.1",
+    "jose": "^5.2.4",
+    "jsonwebtoken": "^9.0.2",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
